# Unhidra

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTEGRATION_REPORT.md  LICENSE  README.md  SQLX_NOTE.md  clippy.toml  unhidra-vcs.sh  unhidra_enroll.py
.github/workflows/: ci.yml  release.yml
.unhidra_vcs/: log
.unhidra_vcs/meta/: active  history
.unhidra_vcs/objects/20251119143222/: run-all.sh  unhidra-vcs.sh
.unhidra_vcs/objects/20251119143222/auth-service/src/: main.rs
.unhidra_vcs/objects/20251119143222/chat-service/: Cargo.toml
.unhidra_vcs/objects/20251119143222/chat-service/src/: main.rs
.unhidra_vcs/objects/20251119143222/net/: Cargo.toml
.unhidra_vcs/objects/20251119143259/auth-api/: Cargo.toml
.unhidra_vcs/objects/20251119143259/bot-service/src/: main.rs
.unhidra_vcs/objects/20251119143259/bot/src/: main.rs
.unhidra_vcs/objects/20251119143259/client/src/: main.rs
.unhidra_vcs/objects/20251119143259/core/: Cargo.toml
.unhidra_vcs/objects/20251119143259/event-hub-service/src/: main.rs
.unhidra_vcs/objects/20251119143259/proto/: Cargo.toml
.unhidra_vcs/objects/20251119143259/server/: Cargo.toml
.unhidra_vcs/objects/20251119143259/unhidra-snapshots/src/: tui.rs
.unhidra_vcs/objects/20251119143325/: Cargo.toml
.unhidra_vcs/objects/20251119143325/auth-api/src/: main.rs
.unhidra_vcs/objects/20251119143325/event-hub-service/: Cargo.toml
.unhidra_vcs/objects/20251119143325/gateway-service/src/: main.rs
.unhidra_vcs/objects/20251119143325/history-service/: Cargo.toml
.unhidra_vcs/objects/20251119143325/net/src/: lib.rs
.unhidra_vcs/objects/20251119143325/presence-service/: Cargo.toml
.unhidra_vcs/objects/20251119143325/presence-service/src/: main.rs
.unhidra_vcs/objects/20251119143325/server/src/: main.rs  main.rsclear
.unhidra_vcs/objects/20251119143325/unhidra-snapshot-gui/: Cargo.toml
.unhidra_vcs/objects/20251119143325/unhidra-snapshots/src/: main.rs  simple_diff.rs
auth-api/: Cargo.toml
auth-api/src/: handlers.rs  main.rs  metrics.rs  oidc.rs  webauthn_service.rs
auth-api/src/oidc/: mod.rs
auth-api/src/webauthn/: mod.rs
auth-service/: Cargo.toml
bot/: Cargo.toml
bot-service/: Cargo.toml
chat-service/: Cargo.toml
chat-service/src/: auth.rs  db.rs  handlers.rs  main.rs  metrics.rs  models.rs  redis_streams.rs  state.rs
chat-service/src/handlers/: channels.rs  files.rs  mod.rs  threads.rs
chat-service/src/streams/: mod.rs  redis_stream.rs
client/: Cargo.toml
client-e2ee/: Cargo.toml
client-e2ee/src/: lib.rs
client/src/: main.rs
core/: Cargo.toml
core/src/: audit.rs  error.rs  lib.rs
core/src/crypto/: e2ee.rs  mod.rs
docs/: INTEGRATION_COMPLETION.md  PHASE_COMPLETION_REPORT.md  SECURITY_ENHANCEMENTS.md
docs/architecture/: SECURITY_ARCHITECTURE.md
docs/status/: DEPLOYMENT.md  ENTERPRISE_ROADMAP.md  PROGRESS.md  RESEARCH.md  TODO.md
e2ee/: Cargo.toml
e2ee/src/: cipher.rs  error.rs  keys.rs  lib.rs  ratchet.rs  session.rs
event-hub-service/src/: main.rs
gateway-service/: Cargo.toml
gateway-service/src/: main.rs  mqtt_bridge.rs  mqtt_bridge_impl.rs  state.rs  ws_handler.rs
gateway-service/src/mqtt/: mod.rs  mqtt_bridge.rs
helm/unhidra/: Chart.yaml  values.yaml
helm/unhidra/templates/: _helpers.tpl  auth-api-deployment.yaml  configmap.yaml  gateway-deployment.yaml
history-service/: Cargo.toml
history-service/src/: db.rs  handlers.rs  main.rs  models.rs
jwt-common/: Cargo.toml
jwt-common/src/: lib.rs
migrations/: 003_audit_log.sql  004_channels_threads.sql  005_postgres_audit_log.sql
presence-service/: Cargo.toml
presence-service/src/: main.rs
proto/src/: lib.rs
scripts/: device_provision.py
server/: Cargo.toml
server/src/: hub.rs
startup-check/src/: main.rs
storage/: Cargo.toml
tests/: integration_tests.rs
unhidra-core/: Cargo.toml
unhidra-core/src/: config.rs  error.rs  lib.rs  models.rs  traits.rs
unhidra-desktop/src-tauri/: Cargo.toml  tauri.conf.json
unhidra-desktop/src-tauri/src/: auth.rs  chat.rs  e2ee.rs  main.rs
unhidra-snapshot-gui/src/: main.rs
unhidra-snapshots/: Cargo.toml
unhidra-vcs-gui/: Cargo.toml
unhidra-vcs-gui/.unhidra_vcs/meta/: history
unhidra-vcs-gui/src/: main.rs
