[workspace]
resolver = "2"

members = [
    # Core services
    "auth-api",
    "gateway-service",
    "chat-service",
    "presence-service",
    "history-service",
    "bot-service",
    "auth-service",

    # Shared libraries
    "jwt-common",
    "uchat-proto",
    "proto",
    "core",
    "net",
    "e2ee",
    "client-e2ee",

    # ML infrastructure
    "ml-bridge",

    # Applications
    "client",
    "bot",
    "server",
    "unhidra-gui",
    "unhidra-vcs-gui",
    "startup-check",
]

# Shared dependency versions for consistency
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
base64 = "0.22"
rand = "0.8"
rand_core = "0.6"

# Cryptography
snow = "0.9"
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Encoding
hex = "0.4"

# Utilities
once_cell = "1.19"
bytes = "1.5"

# Core shared crate
core = { path = "core" }

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
