[package]
name = "auth-api"
version = "0.3.0"
edition = "2021"
description = "Authentication API with Argon2id, OIDC SSO, WebAuthn, and rate limiting"

[dependencies]
# HTTP framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Password hashing
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
rand = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Rate limiting
governor = "0.8"
dashmap = "6"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
once_cell = "1.19"
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = { workspace = true }
url = "2.5"

# OpenID Connect SSO
openidconnect = { version = "3.5" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebAuthn (Passkeys)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Shared crates
jwt-common = { path = "../jwt-common" }
proto = { path = "../proto" }
uchat-proto = { path = "../uchat-proto" }
unhidra-core = { path = "../unhidra-core" }

[dev-dependencies]
tokio-test = "0.4"
