[package]
name = "chat-service"
version = "0.2.0"
edition = "2021"
description = "Chat service with Redis Streams for multi-node scalability"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tungstenite = "0.28"
tokio-tungstenite = "0.28"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Phase 9: Redis Streams
redis = { version = "0.25", features = ["streams", "tokio-comp", "connection-manager"] }

proto = { path = "../proto" }
tower = { version = "0.5.2", features = ["util"] }
core = { path = "../core" }
