[package]
name = "chat-service"
version = "0.2.0"
edition = "2021"
description = "Chat service with group chat and real-time messaging"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = "0.1"

# WebSocket
futures-util = "0.3"
tokio-tungstenite = "0.24"

# Concurrent data structures
dashmap = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"

# Internal crates
proto = { path = "../proto" }
unhidra-core = { path = "../unhidra-core" }
jwt-common = { path = "../jwt-common" }
e2ee = { path = "../e2ee" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[lints]
workspace = true
