[package]
name = "core"
version = "0.2.0"
edition = "2021"
description = "Core shared library with E2EE, audit logging, and common utilities"

[dependencies]
# Serialization
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Phase 7: E2EE Double Ratchet
snow = { version = "0.9.6", features = ["default"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"

# Phase 10: Audit logging
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

[features]
default = []
postgres = ["sqlx"]
