[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for Unhidra services"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Note: PostgreSQL audit logger implementation is available but not compiled by default
# to avoid dependency conflicts. See docs/SECURITY_ENHANCEMENTS.md for usage.

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "forbid"
