[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proto = { path = "../proto" }
futures-util = "0.3.31"
