[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full", "sync"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8"
futures-util = "0.3"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jwt-common = { path = "../jwt-common" }
