[package]
name = "gateway-service"
version = "0.2.0"
edition = "2021"
description = "WebSocket gateway with JWT authentication and rate limiting"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# WebSocket
futures-util = "0.3"

# Concurrent data structures
dashmap = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Rate limiting
governor = "0.8"

# Time handling
chrono = "0.4"

# Utilities
once_cell = "1.19"

# MQTT client for IoT bridge
rumqttc = { version = "0.24", optional = true }

# Shared crates
jwt-common = { path = "../jwt-common" }
uchat-proto = { path = "../uchat-proto" }
e2ee = { path = "../e2ee", optional = true }

[features]
default = []
mqtt-bridge = ["rumqttc", "e2ee"]

[dev-dependencies]
tokio-test = "0.4"
