[package]
name = "unhidra-desktop"
version = "0.2.0"
edition = "2021"
description = "Unhidra Desktop Client - Enterprise Secure Chat"
authors = ["Unhidra Team"]
license = "MIT"
repository = "https://github.com/Matthewtgordon/Unhidra"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket client
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Secure storage
keyring = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# E2EE (shared with backend)
# Note: In production, use the core crate
snow = { version = "0.9.6", features = ["default"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
