[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
tungstenite = "0.28"
tokio-tungstenite = "0.28"

proto = { path = "../proto" }
tower = { version = "0.5.2", features = ["util"] }
