[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9.2"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
proto = { path = "../proto" }
