[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
chrono = "0.4.42"
futures-util = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
unhidra_proto = { version = "0.1.0", path = "../proto" }
